tutordash/server/static/scss/dash.scss
/* ... */
.form-switch {
	height: 100%;
	display: flex;
	align-items: center;
	.switch {
		position: relative;
		display: inline-block;
		width: 3.5em;
		height: 1.75em;

		.slider {
			position: absolute;
			cursor: pointer;
			top: 0;
			left: 0;
			right: 0;
			bottom: 0;
			background-color: #ccc;
			-webkit-transition: 0.4s;
			transition: 0.4s;
			&:before {
				position: absolute;
				content: "";
				height: 1.5em;
				width: 1.5em;
				left: 0.175em;
				bottom: 0.125em;
				background-color: white;
				-webkit-transition: 0.4s;
				transition: 0.4s;
			}
		}

		.slider.round {
			border-radius: 34px;
		}

		.slider.round:before {
			border-radius: 50%;
		}

		input {
			opacity: 0;
			width: 0;
			height: 0;

			&:checked + .slider {
				background-color: #2196f3;
			}

			&:focus + .slider {
				box-shadow: 0 0 1px #2196f3;
			}

			&:checked + .slider:before {
				-webkit-transform: translateX(26px);
				-ms-transform: translateX(26px);
				transform: translateX(26px);
			}
		}
	}
}

.toast-container {
	position: fixed;
	top: 25px;
	right: 30px;
	display: flex;
	flex-direction: column;
	gap: 10px;
	z-index: 1000;

	.toast {
		position: relative;
		width: 30em;
		border-radius: 12px;
		background: #fff;
		padding: 20px 35px 20px 25px;
		display: none;
		overflow-x: hidden;
		align-items: center;
		transform: translateX(calc(100% + 30px));
		transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.35);
		box-shadow: 0em 0em 0.5em 0.1em $gray-3;
		flex-direction: column;
		align-items: start;
		&.active {
			transform: translateX(0%);
		}
		.toast-content {
			display: flex;
			flex-direction: column;

			.title {
				display: flex;
				align-items: center;
				margin-bottom: 1em;
				img {
					margin-right: 1em;
				}
			}
			.message {
				display: flex;
				flex-direction: column;
			}

			.text {
				font-size: 16px;
				font-weight: 400;
				color: #666666;
				font-optical-sizing: auto;
				font-style: normal;
				&.text-1 {
					font-weight: 600;
					color: #333;
				}
			}
		}
		.toast-footer {
			@include modal-and-toast-footer();
		}
		.close {
			position: absolute;
			top: 10px;
			right: 15px;
			padding: 5px;
			cursor: pointer;
			opacity: 0.7;
			&:hover {
				opacity: 1;
			}
		}
	}
}

